--- a/S&F-Hub/CodiFont/vista/Administrador.fxml
+++ b/S&F-Hub/CodiFont/vista/Administrador.fxml
@@ -39,5 +39,6 @@
          </font>
       </Button>
       <Label fx:id="lblError" alignment="CENTER" layoutX="322.0" layoutY="530.0" prefHeight="38.0" prefWidth="176.0" />
+      <Button fx:id="Usuario" layoutX="735.0" layoutY="556.0" mnemonicParsing="false" text="Usuario" />
    </children>
 </AnchorPane>
