--- a/S&F-Hub/CodiFont/vista/RegistrarPSAdministrador.fxml
+++ b/S&F-Hub/CodiFont/vista/RegistrarPSAdministrador.fxml
@@ -71,5 +71,6 @@
       <Button fx:id="btnImg" layoutX="179.0" layoutY="142.0" mnemonicParsing="false" text="Seleccionar img" />
       <ImageView fx:id="imgSP" fitHeight="106.0" fitWidth="141.0" layoutX="159.0" layoutY="176.0" pickOnBounds="true" preserveRatio="true" />
       <ListView fx:id="listImg" layoutX="11.0" layoutY="141.0" prefHeight="42.0" prefWidth="132.0" />
+      <Button fx:id="Volver" layoutX="14.0" layoutY="32.0" mnemonicParsing="false" text="Volver" />
    </children>
 </AnchorPane>
