--- a/S&F-Hub/CodiFont/vista/RegistrarPSAdministrador.fxml
+++ b/S&F-Hub/CodiFont/vista/RegistrarPSAdministrador.fxml
@@ -72,5 +72,10 @@
       <ImageView fx:id="imgSP" fitHeight="106.0" fitWidth="141.0" layoutX="159.0" layoutY="176.0" pickOnBounds="true" preserveRatio="true" />
       <ListView fx:id="listImg" layoutX="11.0" layoutY="141.0" prefHeight="42.0" prefWidth="132.0" />
       <Button fx:id="Volver" layoutX="14.0" layoutY="32.0" mnemonicParsing="false" text="Volver" />
+      <Label fx:id="lblRegistro" alignment="CENTER" layoutX="547.0" layoutY="543.0" opacity="0.0" prefHeight="37.0" prefWidth="205.0" text="Registro Exitoso" textFill="#46e450">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
